--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -341,6 +341,12 @@
   items:
     - name: API 参考
       items:
+        - name: ARM 模板
+          href: /azure/templates/microsoft.web/2018-11-01/sites/functions
+        - name: Azure CLI
+          href: /cli/azure/functionapp
+        - name: Azure PowerShell
+          href: /powershell/module/az.functions
         - name: Java
           href: 'https://docs.microsoft.com/java/api/overview/azure/functions/runtime?view=azure-java-stable'
         - name: Python
@@ -461,6 +467,9 @@
           items:
             - name: 概述
               href: functions-bindings-signalr-service.md
+              displayName: SignalR Service
+            - name: 触发器
+              href: functions-bindings-signalr-service-trigger.md
               displayName: SignalR Service
             - name: 输入
               href: functions-bindings-signalr-service-input.md
