--- a/articles/lab-services/classroom-labs/TOC.yml
+++ b/articles/lab-services/classroom-labs/TOC.yml
@@ -50,6 +50,8 @@
               href: class-type-big-data-analytics.md
             - name: MATLAB
               href: class-type-matlab.md
+            - name: SolidWorks 计算机辅助设计 (CAD)
+              href: class-type-solidworks.md
 - name: 操作指南
   items:
     - name: 管理员指南
@@ -112,6 +114,8 @@
               href: how-to-enable-nested-virtualization-template-vm-ui.md
             - name: 使用脚本在模板 VM 上启用嵌套虚拟化
               href: how-to-enable-nested-virtualization-template-vm-using-script.md
+        - name: 为实验室设置 GPU
+          href: how-to-setup-lab-gpu.md
         - name: 准备 Windows 模板 VM
           href: how-to-prepare-windows-template.md
         - name: 控制 Windows 关机行为
