--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -35,6 +35,8 @@
       href: security-baselines-overview.md
     - name: API 管理安全基线
       href: ../../api-management/security-baseline.md
+    - name: 应用程序网关安全基线
+      href: ../../application-gateway/security-baseline.md
     - name: Azure Cache for Redis 安全基线
       href: ../../azure-cache-for-redis/security-baseline.md
     - name: 备份安全基线
@@ -47,8 +49,12 @@
       href: ../../container-registry/security-baseline.md
     - name: Cosmos DB 安全基线
       href: ../../cosmos-db/security-baseline.md
+    - name: 客户密码箱安全基线
+      href: ../fundamentals/customer-lockbox-security-baseline.md
     - name: 数据资源管理器安全基线
       href: /azure/data-explorer/security-baseline
+    - name: 数据工厂安全基线
+      href: /azure/data-factory/security-baseline
     - name: Databricks 安全基线
       href: ../../azure-databricks/security-baseline.md
     - name: 事件中心安全基线
@@ -67,5 +73,7 @@
       href: ../../postgresql/security-baseline.md
     - name: SQL 数据库安全基线
       href: ../../sql-database/security-baseline.md
+    - name: 流分析基线
+      href: ../../stream-analytics/security-baseline.md
     - name: 存储安全基线
       href: ../../storage/common/security-baseline.md
