--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -195,7 +195,13 @@
 - name: 操作指南
   items:
     - name: 创建、查看和管理系统主题
-      href: create-view-manage-system-topics.md
+      items:
+        - name: Azure 门户
+          href: create-view-manage-system-topics.md
+        - name: Azure CLI
+          href: create-view-manage-system-topics-cli.md
+        - name: Azure 资源管理器模板
+          href: create-view-manage-system-topics-arm.md
     - name: 发布到自定义主题
       href: post-to-custom-topic.md
     - name: 订阅 Auth0 事件
