commit translated contents

--- a/articles/azure-databricks/TOC.yml
+++ b/articles/azure-databricks/TOC.yml
@@ -11,6 +11,8 @@
       items:
         - name: 门户
           href: quickstart-create-databricks-workspace-portal.md
+        - name: PowerShell
+          href: quickstart-create-databricks-workspace-powershell.md
         - name: ARM 模板
           displayName: Resource Manager
           href: quickstart-create-databricks-workspace-resource-manager-template.md
