--- a/articles/static-web-apps/TOC.yml
+++ b/articles/static-web-apps/TOC.yml
@@ -43,6 +43,8 @@
           href: publish-hugo.md
         - name: VuePress
           href: publish-vuepress.md
+        - name: Jekyll
+          href: publish-jekyll.md
     - name: 从框架部署
       items:
         - name: Next.js
