--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -133,6 +133,8 @@
           href: upgrade-cluster.md
         - name: 使用运行时间 SLA
           href: uptime-sla.md
+        - name: 升级节点映像（预览版）
+          href: node-image-upgrade.md
         - name: 处理节点 OS 更新
           href: node-updates-kured.md
         - name: 配置 AKS 群集
