--- a/articles/machine-learning/data-science-virtual-machine/toc.yml
+++ b/articles/machine-learning/data-science-virtual-machine/toc.yml
@@ -15,6 +15,11 @@
       href: provision-vm.md
     - name: 创建 Ubuntu Data Science Virtual Machine
       href: dsvm-ubuntu-intro.md
+- name: 教程
+  items:
+    - name: 使用 ARM 模板创建 DSVM
+      displayName: Resource Manager
+      href: dsvm-tutorial-resource-manager.md
 - name: 概念
   items:
     - name: 深度学习和人工智能框架
