--- a/articles/governance/blueprints/index.yml
+++ b/articles/governance/blueprints/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: DCtheGeek
   ms.author: dacoulte
   ms.date: 09/01/2019
-  ms.openlocfilehash: d80b82b9e8e41e9bfdc7b9ac180ccc8916481acb
-  ms.sourcegitcommit: 6a9f01bbef4b442d474747773b2ae6ce7c428c1f
+  ms.openlocfilehash: 525d09dcd12c19ded3e13b38a56290f7816a26a7
+  ms.sourcegitcommit: 1de57529ab349341447d77a0717f6ced5335074e
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/27/2020
-  ms.locfileid: "84116110"
+  ms.lasthandoff: 06/09/2020
+  ms.locfileid: "84609057"
 landingContent:
 - title: 关于 Azure 蓝图
   linkLists:
@@ -39,6 +39,8 @@ landingContent:
       url: ./create-blueprint-portal.md
     - text: 创建新蓝图 (PowerShell)
       url: ./create-blueprint-powershell.md
+    - text: 创建新蓝图 (Azure CLI)
+      url: ./create-blueprint-azurecli.md
     - text: 创建新蓝图 (REST API)
       url: ./create-blueprint-rest-api.md
   - linkListType: tutorial
@@ -82,7 +84,7 @@ landingContent:
   - linkListType: get-started
     links:
     - text: 有关 Azure 蓝图的 Microsoft Q&A
-      url: /answers/topics/azure-blueprints.html.html
+      url: /answers/topics/azure-blueprints.html
     - text: Azure 治理 YouTube 频道
       url: https://www.youtube.com/channel/UCZZ3-oMrVI5ssheMzaWC4uQ
     - text: 请求产品功能
