--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -116,7 +116,27 @@
     - name: 配额和区域限制
       href: quotas-skus-regions.md
     - name: 迁移到 AKS
-      href: aks-migration.md
+      items:
+        - name: 规划和执行迁移
+          href: aks-migration.md
+        - name: Spring Boot
+          href: /azure/developer/java/migration/migrate-spring-boot-to-azure-kubernetes-service
+          maintainContext: false
+        - name: Tomcat
+          href: /azure/developer/java/migration/migrate-tomcat-to-containers-on-azure-kubernetes-service
+          maintainContext: false
+        - name: Wildfly
+          href: /azure/developer/java/migration/migrate-wildfly-to-wildfly-on-azure-kubernetes-service
+          maintainContext: false
+        - name: WebLogic
+          href: /azure/developer/java/migration/migrate-weblogic-to-wildfly-on-azure-kubernetes-service
+          maintainContext: false
+        - name: WebSphere
+          href: /azure/developer/java/migration/migrate-websphere-to-wildfly-on-azure-kubernetes-service
+          maintainContext: false
+        - name: JBoss EAP
+          href: /azure/developer/java/migration/migrate-jboss-eap-to-wildfly-on-azure-kubernetes-service
+          maintainContext: false
     - name: 受支持的 Kubernetes 版本
       href: supported-kubernetes-versions.md
     - name: 主机 OS 中的安全强化
