--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -36,6 +36,12 @@
       href: manage-dhcp.md
     - name: 灾难恢复
       href: disaster-recovery.md
+    - name: 用于 AVS 的 Azure 备份服务器
+      items:
+        - name: 设置用于 AVS 的 Azure 备份服务器
+          href: set-up-mabs-for-avs.md
+        - name: 使用 Azure 备份服务器备份 AVS VM
+          href: backup-avs-vms-with-mabs.md
 - name: 参考
   items: null
 - name: 资源
