--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -219,8 +219,12 @@
           href: sap-hana-db-manage.md
     - name: Azure 备份服务器 (MABS)
       items:
-        - name: Azure 备份服务器保护矩阵
-          href: backup-mabs-protection-matrix.md
+        - name: 保护矩阵
+          items:
+            - name: MABS V3 UR1 保护矩阵
+              href: backup-mabs-protection-matrix.md
+            - name: MABS V3 RTM 保护矩阵
+              href: microsoft-azure-backup-server-protection-v3.md
         - name: 安装或升级
           items:
             - name: 安装 Azure 备份服务器
@@ -229,7 +233,7 @@
               href: backup-mabs-add-storage.md
             - name: MABS 中的新增功能
               href: backup-mabs-whats-new-mabs.md
-            - name: 发行说明 MABS V3
+            - name: 发行说明 MABS
               href: backup-mabs-release-notes-v3.md
             - name: 无人参与的安装
               href: backup-mabs-unattended-install.md
@@ -284,7 +288,9 @@
         - name: 使用导入/导出 (MARS) 进行脱机备份
           href: backup-azure-backup-import-export.md
         - name: 使用导入/导出 (DPM/MABS) 进行脱机备份
-          href: backup-azure-backup-server-import-export-.md
+          href: backup-azure-backup-server-import-export.md
+        - name: DPM 和 MABS 的脱机备份（以前的版本）
+          href: offline-backup-server-previous-versions.md
     - name: 监视和警报
       items:
         - name: 使用备份资源管理器
