--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -1,60 +1,130 @@
 - name: Azure 数字孪生
   href: index.yml
 - name: 概述
-- name: 快速入门
-  expanded: true
+  items:
+    - name: 关于 Azure 数字孪生
+      href: overview.md
+    - name: 与上一版本之间的差异
+      href: overview-differences.md
 - name: 教程
   items:
-    - name: 使用数字孪生监视建筑
+    - name: 为客户端应用编写代码
+      href: tutorial-code.md
+    - name: 使用示例客户端应用了解基础知识
+      href: tutorial-command-line-app.md
+    - name: 连接端到端解决方案
+      href: tutorial-end-to-end.md
 - name: 概念
   items:
-    - name: 安全性
+    - name: 自定义模式
+      href: concepts-models.md
+    - name: 数字孪生和孪生图
+      href: concepts-twins-graph.md
+    - name: 查询语言
+      href: concepts-query-language.md
+    - name: 与其他服务集成
+      href: concepts-integration.md
+    - name: 事件路由
+      href: concepts-route-events.md
+    - name: Azure 数字孪生解决方案的安全性
+      href: concepts-security.md
 - name: 操作指南
   items:
-    - name: 查询数字孪生 API
+    - name: 使用 Azure 数字孪生 CLI
+      href: how-to-use-cli.md
+    - name: 使用 API 和 SDK
+      href: how-to-use-apis-sdks.md
+    - name: 使用 AutoRest 创建自定义 SDK
+      href: how-to-create-custom-sdks.md
+    - name: 创建 Azure 数字孪生实例
+      href: how-to-set-up-instance.md
+    - name: 对客户端应用程序进行身份验证
+      href: how-to-authenticate-client.md
+    - name: 分析和验证模型
+      href: how-to-use-parser.md
+    - name: 管理孪生模型
+      href: how-to-manage-model.md
+    - name: 管理数字孪生
+      href: how-to-manage-twin.md
+    - name: 使用关系管理孪生图
+      href: how-to-manage-graph.md
+    - name: 查询孪生图
+      href: how-to-query-graph.md
+    - name: 管理终结点和路由
+      href: how-to-manage-routes.md
+    - name: 解释事件数据
+      href: how-to-interpret-event-data.md
+    - name: 设置用于处理数据的 Azure 函数
+      href: how-to-create-azure-function.md
+    - name: 从 IoT 中心引入遥测数据
+      href: how-to-ingest-iot-hub-data.md
 - name: 参考
+  items:
+    - name: 数字孪生 REST API
+      href: 'https://docs.microsoft.com/rest/api/azure-digitaltwins/'
+    - name: '数字孪生 .NET (C#) SDK'
+      href: 'https://github.com/Azure/azure-sdk-for-net/tree/master/sdk/digitaltwins/Azure.DigitalTwins.Core'
+    - name: 数字孪生服务限制
+      href: reference-service-limits.md
+    - name: DTDL v2 规范
+      href: 'https://github.com/Azure/opendigitaltwins-dtdl/blob/master/DTDL/v2/dtdlv2.md'
+    - name: DTMI 规范
+      href: 'https://github.com/Azure/digital-twin-model-identifier'
+    - name: Azure CLI
+      href: /cli/azure/iot
+    - name: Azure IoT CLI 扩展
+      href: /cli/azure/ext/azure-iot/iot?view=azure-cli-latest
+    - name: Azure Cloud Shell
+      href: 'https://shell.azure.com'
+    - name: Azure PowerShell
+      href: '/powershell/module/az.iothub#iot'
+    - name: Azure 门户
+      href: 'https://portal.azure.com'
+    - name: Azure RBAC 文档
+      href: /role-based-access-control/overview
 - name: 资源
   items:
-    - name: 开发人员资源
-      items:
-        - name: Azure 数字孪生图形查看器
-          href: 'https://github.com/Azure/azure-digital-twins-graph-viewer'
-        - name: '用于 C# (.NET) 的 Azure 数字孪生示例'
-          href: 'https://github.com/Azure-Samples/digital-twins-samples-csharp'
-        - name: Azure 数字孪生 REST API
-          href: 'https://docs.westcentralus.azuresmartspaces.net/management/swagger'
+    - name: 适用于 VS Code 的 DTDL 扩展
+      href: 'https://marketplace.visualstudio.com/items?itemName=vsciot-vscode.vscode-dtdl'
+    - name: 支持和帮助选项
+      href: /azure/iot-fundamentals/iot-support-help
+    - name: 客户案例
+      href: 'https://customers.microsoft.com/en-us/search?sq=%22Azure%20Digital%20Twins%22&ff=&p=0&so=story_publish_date%20desc'
+    - name: Channel 9 视频
+      href: 'https://channel9.msdn.com/Search?term=%22Azure%20Digital%20Twins%22'
+    - name: 客户数据请求
+      href: resources-customer-data-requests.md
     - name: 定价和可用性
       items:
         - name: 定价
-          href: 'https://azure.microsoft.com/pricing/details/digital-twins/'
-        - name: 定价计算器
-          href: 'https://azure.microsoft.com/pricing/calculator/'
-        - name: 上市区域
-          href: 'https://azure.microsoft.com/regions/services/'
-    - name: 支持和帮助选项
+          href: 'https://azure.microsoft.com/pricing/details/digital-twins'
+        - name: 区域和可用性
+          href: 'https://azure.microsoft.com/global-infrastructure/services/?products=digital-twins'
+- name: 相关内容
+  items:
+    - name: 解决方案
       items:
-        - name: Azure 支持选项
-          href: 'https://azure.microsoft.com/support/options/'
-        - name: Azure IoT 支持和帮助选项
-          href: 'https://docs.microsoft.com/azure/iot-fundamentals/iot-support-help'
-        - name: Stack Overflow
-          href: 'https://stackoverflow.com/questions/tagged/azure-digital-twins'
-        - name: Microsoft Q&A 问题页面
-          href: 'https://docs.microsoft.com/answers/topics/azure-digital-twins.html'
-        - name: Azure IoT 代码示例
-          href: 'https://docs.microsoft.com/samples/browse/?term=iot'
-    - name: 反馈和论坛
+        - name: IoT 解决方案加速器
+          href: /azure/iot-suite
+        - name: IoT Central
+          href: /azure/iot-central/iot-support-help
+    - name: 平台服务
       items:
-        - name: Microsoft Q&A 问题页面
-          href: 'https://docs.microsoft.com/answers/topics/azure-digital-twins.html'
-        - name: 产品请求和建议
-          href: 'https://feedback.azure.com/forums/916621-azure-digital-twins'
-    - name: 客户案例
-      href: 'https://customers.microsoft.com/en-us/search?sq=%22Azure%20Digital%20Twins%22&ff=&p=0&so=story_publish_date%20desc'
-    - name: Azure 视频
-      href: 'https://azure.microsoft.com/resources/videos/index/?services=digital-twins&sort=newest'
-    - name: Channel 9 视频
-      href: 'https://channel9.msdn.com/Search?term=%22Azure%20Digital%20Twins%22'
-    - name: Azure IoT 更新
-      href: 'https://azure.microsoft.com/roadmap/?category=iot'
-  expanded: true
+        - name: IoT 中心
+          href: /azure/iot-hub
+        - name: IoT 即插即用
+          href: /azure/iot-pnp
+        - name: IoT 中心设备预配服务
+          href: /azure/iot-dps
+        - name: 地图
+          href: /azure/azure-maps
+        - name: 服务 SDK
+          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks'
+        - name: 时序见解
+          href: /azure/time-series-insights
+    - name: Edge 解决方案
+      items:
+        - name: IoT Edge
+          href: /azure/iot-edge
+        - name: IoT 设备 SDK
+          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks'
