--- a/articles/digital-twins/index.yml
+++ b/articles/digital-twins/index.yml
@@ -1,75 +1,81 @@
 ### YamlMime:Landing
 title: Azure 数字孪生预览版文档
-summary: 了解如何使用 Azure 数字孪生来连接人员、地点等，以及如何使用空间智能构建 IoT 解决方案。 逐步完成快速入门和教程，以监视假想的智能建筑、了解深入的概念并创建用于为物理环境建模的下一代 IoT 解决方案。
+summary: 了解如何使用 Azure 数字孪生来创建资产、环境和业务系统的数字表示形式，以构建针对现实世界进行建模的下一代 IoT 解决方案。
 metadata:
   title: Azure 数字孪生预览版文档 - 教程和 API 参考 | Microsoft Docs
   description: 了解如何使用 Azure 数字孪生来连接人员、地点等，以及构建带有空间智能的 IoT 解决方案。
-  services: digital-twins
   ms.service: digital-twins
-  ms.subservice: digital-twins
   ms.topic: landing-page
   ms.collection: collection
-  author: KingdomOfEnds
-  ms.author: v-adgera
-  ms.date: 02/07/2020
-  ms.openlocfilehash: e5d66ffb35cb0ce50aa7898cad30bf9fd0bf57ac
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  author: philmea
+  ms.author: philmea
+  ms.date: 02/12/2020
+  ms.openlocfilehash: 93bfe0db668e3aaa78e7f58b715490dfe26fbe7a
+  ms.sourcegitcommit: 1de57529ab349341447d77a0717f6ced5335074e
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "77110570"
+  ms.lasthandoff: 06/09/2020
+  ms.locfileid: "84610026"
 landingContent:
 - title: 关于 Azure 数字孪生
   linkLists:
   - linkListType: overview
     links:
     - text: Azure 数字孪生是什么？
-      url: about-digital-twins.md
-  - linkListType: concept
-    links:
-    - text: 了解数字孪生对象模型和空间智能图
-      url: concepts-objectmodel-spatialgraph.md
-  - linkListType: video
-    links:
-    - text: Azure 数字孪生简介
-      url: https://channel9.msdn.com/Shows/Internet-of-Things-Show/Azure-Digital-Twins-Introduction
-- title: 入门
+      url: overview.md
+- title: 教程入门
   linkLists:
-  - linkListType: quickstart
-    links:
-    - text: 查找可用房间
-      url: quickstart-view-occupancy-dotnet.md
   - linkListType: tutorial
     links:
-    - text: 部署和配置
-      url: tutorial-facilities-setup.md
-    - text: 预配和监视状况
-      url: tutorial-facilities-udf.md
-    - text: 使用逻辑应用发出通知
-      url: tutorial-facilities-events.md
-    - text: 使用时序见解将事件可视化
-      url: tutorial-facilities-analyze.md
-- title: 使用 Azure 数字孪生进行开发
+    - text: 为客户端应用编写代码
+      url: tutorial-code.md
+  - linkListType: tutorial
+    links:
+    - text: 使用示例客户端应用了解基础知识
+      url: tutorial-command-line-app.md
+  - linkListType: tutorial
+    links:
+    - text: 连接端到端解决方案
+      url: tutorial-end-to-end.md
+- title: 了解
   linkLists:
   - linkListType: concept
     links:
-    - text: 设备连接与遥测数据入口
-      url: concepts-device-ingress.md
-    - text: 数据处理和用户定义的函数
-      url: concepts-user-defined-functions.md
+    - text: 自定义模式
+      url: concepts-models.md
+  - linkListType: concept
+    links:
+    - text: 数字孪生和孪生图
+      url: concepts-twins-graph.md
+  - linkListType: concept
+    links:
+    - text: 查询语言
+      url: concepts-query-language.md
+- title: 开发
+  linkLists:
   - linkListType: how-to-guide
     links:
-    - text: 设置 Postman
-      url: how-to-configure-postman.md
-    - text: 创建用户定义的函数
-      url: how-to-user-defined-functions.md
+    - text: 使用 Azure 数字孪生 CLI
+      url: how-to-use-cli.md
+  - linkListType: how-to-guide
+    links:
+    - text: 创建 Azure 数字孪生实例
+      url: how-to-set-up-instance.md
+  - linkListType: how-to-guide
+    links:
+    - text: 对客户端应用程序进行身份验证
+      url: how-to-authenticate-client.md
 - title: API 参考
   linkLists:
-  - linkListType: reference
-    links:
-    - text: 用户定义函数客户端库
-      url: reference-user-defined-functions-client-library.md
   - linkListType: how-to-guide
     links:
-    - text: 使用数字孪生 Swagger
-      url: how-to-use-swagger.md
+    - text: 使用 Azure 数字孪生 API 和 SDK
+      url: how-to-use-apis-sdks.md
+  - linkListType: how-to-guide
+    links:
+    - text: 使用 AutoRest 创建自定义 SDK
+      url: how-to-create-custom-sdks.md
+  - linkListType: reference
+    links:
+    - text: REST API
+      url: https://docs.microsoft.com/rest/api/azure-digitaltwins/
