--- a/articles/key-vault/general/toc.yml
+++ b/articles/key-vault/general/toc.yml
@@ -15,6 +15,10 @@
           href: tutorial-net-windows-virtual-machine.md
         - name: 将 Azure Key Vault 与通过 Python 编写的 Windows 虚拟机配合使用
           href: tutorial-python-windows-virtual-machine.md
+    - name: Azure Kubernetes 服务
+      items:
+        - name: 将 Azure Key Vault 与 Kubernetes 集成
+          href: key-vault-integrate-kubernetes.md
     - name: 使用托管标识和 .NET 将 Key Vault 连接到 Web 应用
       href: tutorial-net-create-vault-azure-web-app.md
 - name: 示例
