--- a/articles/remote-rendering/samples/toc.yml
+++ b/articles/remote-rendering/samples/toc.yml
@@ -1,5 +1,7 @@
 - name: 示例模型
   href: sample-model.md
+- name: Azure 远程渲染资产工具
+  href: azure-remote-rendering-asset-tool.md
 - name: Unity 展示应用程序
   href: showcase-app.md
 - name: PowerShell 脚本示例
